package com.zsx.design.pattern.abstraction.factory;


public abstract class AbstractFactory {
    public abstract IMouse createMouse();

    public abstract IKeyboard creatKeyboard();
}
