package com.zsx.design.pattern.abstraction.factory;

public interface IKeyboard {
    String getKeyboard();
}
