package com.zsx.design.pattern.abstraction.factory;

public interface IMouse {
    String getMouse();
}
